# nocfo

./: .env.example  .gitignore  README.md  pyproject.toml  rules.yaml
docker/: .env.example  docker-compose.yml
docs/: architecture.md  setup-guide.md
openclaw/: openclaw.json.example
scripts/: deploy.sh  setup.sh  setup_oauth.py  verify_connection.py
services/fortnox/: .env.example  Dockerfile  README.md  pyproject.toml
services/fortnox/scripts/: setup_oauth.py  verify_connection.py
services/fortnox/tests/: conftest.py
skills/fortnox-auth/: SKILL.md
skills/fortnox-tools/: SKILL.md
skills/period-closing/: SKILL.md
skills/receipt-booking/: SKILL.md
skills/reconciliation/: SKILL.md
skills/reports/: SKILL.md
skills/rules/: SKILL.md
src/nocfo/: cli.py  config.py
systemd/: frey-chrome.service.example  frey-fortnox.service.example  frey-openclaw.service.example
tests/: conftest.py
tests/test_bookkeeping/: test_idempotency.py  test_journal_validation.py  test_prompt_builder.py  test_reconciliation.py  test_rules.py
tests/test_browser/: test_chrome.py  test_client.py  test_evidence.py  test_handler.py  test_learned.py  test_operations_state.py  test_selectors.py  test_tokens.py  test_vision.py
tests/test_fortnox/: test_client.py  test_health.py  test_models.py  test_vouchers.py  test_web_session.py
tests/test_recorder/: test_models.py  test_recorder.py  test_replay.py  test_vision_fallback.py
tools/fortnox/: package-lock.json  package.json  tsconfig.test.json
workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
(+166 files in other folders)
