[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nocfo"
version = "0.1.0"
description = "Fortnox bookkeeping automation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "structlog>=24.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "playwright>=1.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
nocfo = "nocfo.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
